src/test/testData/kubernetes/KUBE010/pod.yaml.denied
apiVersion: v1
kind: Pod
metadata:
  name: nginx-selinux-container
spec:
  containers:
    - name: nginx
      image: nginx:1.29-alpine
      ports:
        - containerPort: 80
      securityContext:
        seccompProfile:
          type: <error descr="Seccomp profile set to 'Unconfined' disables syscall filtering and exposes the container to kernel-level attacks.">Unconfined</error>